--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.handzlikchris.fastscriptreload": "https://github.com/handzlikchris/FastScriptReload.git?path=Assets",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.15.4",
     "com.unity.ide.rider": "3.0.7",
